# stk

./: .gitignore  README  run.py
config/: cfg_stk.py  config.json
config/daily_holding/: stock_info_small_cap.json  stock_info_test.json
config/sample/: .gitignore
config/sample/L1/: SH603538_20171229.csv  SZ300446_20171229.csv
config/sample/L2/: README
config/sample/L2/20230103/000001.SZ/: 行情.csv
config/sample/L2/20230103/600000.SH/: 行情.csv  逐笔委托.csv  逐笔成交.csv
config/sample/L2/20240102/000001.SZ/: 行情.csv
config/sample/L2/20240102/600000.SH/: 行情.csv  逐笔委托.csv  逐笔成交.csv
config/sample/L2/20250102/000001.SZ/: 行情.csv
config/sample/L2/20250102/600000.SH/: 行情.csv
config/sample/L2/300446.SZ/: 委托队列.csv  行情.csv  逐笔委托.csv  逐笔成交.csv
config/sample/L2/603538.SH/: 委托队列.csv  行情.csv  逐笔成交.csv
cpp/: .gitignore  CMakeLists.txt  build.bat
cpp/include/: AnalysisHighFrequency copy.hpp  AnalysisHighFrequency.hpp  AnalysisTechnical.hpp  LimitOrderBook.hpp  binary_parser_L1.hpp  technical_analysis.hpp
cpp/include/codec/: L1.md  L1_DataType.hpp  L2.md  L2_DataType.hpp  README  binary_decoder_L1.hpp  binary_decoder_L2.hpp  binary_dict_L2.hpp  binary_encoder_L1.hpp  binary_encoder_L2.hpp  json_config.hpp
cpp/include/codec/parallel/: processing_config.hpp  processing_types.hpp  workers.hpp
cpp/include/define/: CBuffer.hpp  Dtype.hpp  MemPool.hpp
cpp/include/define/MemPool/: README.md
cpp/include/features/: CoreSequential.hpp  FeaturesDefine.hpp  FeaturesHour.hpp  FeaturesMinute.hpp  FeaturesTick.hpp  README.md
cpp/include/features/backend/: FeatureStore.hpp  FeatureStoreConfig.hpp  FeatureStoreDemo.hpp
cpp/include/lob/: LimitOrderBook.hpp  LimitOrderBookDefine.hpp  README  lob.h  lob_deduct.hpp  lob_reorder.hpp  mem_pool.hpp
cpp/include/math/: LimitOrderBook.hpp
cpp/include/math/feature/: README.md
cpp/include/math/sample/: ResampleRunBar.hpp
cpp/include/misc/: VariableMonitor.hpp  file_check.hpp  file_convert.hpp  logging.hpp  misc.hpp  progress_parallel.hpp  progress_single.hpp  timer.hpp
cpp/include/sample/: ResampleRunBar.hpp
cpp/include/worker/: crosssectional_worker.hpp
cpp/projects/L2_database/: CMakeLists.txt  build.sh
cpp/projects/L2_databse/: CMakeLists.txt  build.sh
cpp/projects/main/: CMakeLists.txt  build.sh
cpp/projects/main_csv/: CMakeLists.txt  build.sh
cpp/script/: binary_encoder_L1_1asset_1month.py  binary_encoder_L1_all.py  binary_encoder_L2_all.py  plot_bars.py  plot_signals.py
cpp/src/: AnalysisHighFrequency copy.cpp  AnalysisHighFrequency.cpp  L2_database.cpp  binary_parser_L1.cpp  main.cpp  main_csv.cpp  technical_analysis.cpp
cpp/src/codec/: binary_decoder_L1.cpp  binary_decoder_L2.cpp  binary_dict_L2.cpp  binary_encoder_L1.cpp  binary_encoder_L2.cpp  json_config.cpp
cpp/src/codec/parallel/: processing_types.cpp  workers.cpp
cpp/src/misc/: file_check.cpp  file_convert.cpp  logging.cpp
cpp/src/worker/: crosssectional_worker.cpp
doc/: FileSystem.md
py/: L1_database.py  L2_database.py  main_csv.py
py/app/DataProvider_API/Lixingren/: LixingrenAPI.py
py/app/DataProvider_API/Mairui/: MairuiAPI.py
py/app/FileRepair/: fix_7z_to_rar.py  fix_archive_structure.py  fix_zip_to_rar.py  repair_utils.py
py/app/Util/: UtilStk.py
